syntax = "proto3";
package album;

option go_package = "github.com/fir1/project-test-proto/album";

service AlbumService {
    rpc GetAlbum (GetAlbumRequest) returns (GetAlbumResponse);
    rpc ListAlbums (ListAlbumsRequest) returns (ListAlbumsResponse);
}

message Pagination {
    uint32 limit = 1;
    uint32 offset = 2;
}

message PaginationResponse {
    uint32 total = 1;
    uint32 page_size = 2;
}

enum Order {
    UNDEFINED = 0;
    ASC = 1;
    DESC = 2;
}

message Photo {
    string photo_date = 1; // must be in format 2019-03-30 14:12:19
    float latitude = 2; 
    float longitude = 3;
    repeated string titles = 4;
    Weather weather = 5;
    Address address = 6;
}

enum Weather {
    WEATHER_UNDEFINED = 0;
    WEATHER_SUNNY = 1;
    WEATHER_RAINY = 2;
    WEATHER_SNOWY = 3;
}

message Address {
    string line1 = 1;
    string line2 = 2;
    string city = 3;
    string post_code = 4;
    string country = 5;
    string country_code = 6;
    string state = 7;
}

message Album {
    repeated Photo photos = 1;
}

message GetAlbumRequest {
    string album_id = 1;

    message Filter {
        optional string photo_address_keyword = 1;
        optional string photo_date_from = 2;
        optional string photo_date_to = 3;
        optional Weather weather = 4;
    }
    optional Filter filter = 2;

    message Sort {
        optional Order photo_date = 1;
        optional Order photo_country = 2;
    }
    optional Sort sort = 3;
}

message GetAlbumResponse {
    Album album = 1;
}

message ListAlbumsRequest {
    message Filter {
        optional uint64 minimum_photo_items = 1;
        optional uint64 maximum_photo_items = 2;
    }
    optional Filter filter = 1;

    message Sort {
        optional Order photo_counts = 1;
    }
    optional Sort sort = 2;
    Pagination pagination = 3;
}

message ListAlbumsResponse {
    repeated Album albums = 1;
    PaginationResponse pagination = 2;
}